[gd_scene load_steps=6 format=2]

[ext_resource path="res://GameParts/HauntableObjects/HauntableBase.gd" type="Script" id=1]
[ext_resource path="res://Resources/Particles/smoke4.png" type="Texture" id=2]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 0.4912 ), 0.0, 0.0, 0, 0, Vector2( 0.202507, 1 ), 1.23162, 1.23162, 0, 0, Vector2( 1, 0.3416 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0, 0.423841, 0.907285 )
colors = PoolColorArray( 1, 1, 1, 1, 0.87451, 0.87451, 0.87451, 1, 0.211765, 0.211765, 0.211765, 0 )

[sub_resource type="CircleShape2D" id=3]
radius = 13.3333

[node name="HauntableBase" type="Node2D"]
script = ExtResource( 1 )

[node name="PossesionParticles" type="CPUParticles2D" parent="."]
modulate = Color( 1, 1, 1, 0.392274 )
self_modulate = Color( 1, 1, 1, 0.227451 )
amount = 45
lifetime = 4.0
speed_scale = 2.0
local_coords = false
draw_order = 1
texture = ExtResource( 2 )
emission_shape = 1
emission_sphere_radius = 10.63
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 12.0
linear_accel = -21.51
angle = 720.0
angle_random = 1.0
scale_amount = 0.4
scale_amount_curve = SubResource( 1 )
color_ramp = SubResource( 2 )

[node name="BaseArea" type="Area2D" parent="."]
gravity = 0.0
__meta__ = {
"_edit_lock_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="BaseArea"]
scale = Vector2( 3, 3 )
shape = SubResource( 3 )
__meta__ = {
"_edit_lock_": true
}
[connection signal="body_entered" from="BaseArea" to="." method="_on_BaseArea_body_entered"]
[connection signal="body_exited" from="BaseArea" to="." method="_on_BaseArea_body_exited"]
